# TeleDrive

./: .dockerignore  .editorconfig  .env  .env-example  .env.bak  .env.example  .env.production  .env_simple  .eslintrc.json  .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc  .yamllint.yml  API_SETUP_REPORT.md  ASYNCIO_FIX_SUMMARY.md  AUTH_FIX_SUMMARY.md  AUTO_FIX.bat  AUTO_LOGIN_GUIDE.md  AutoCommit.ps1  BAT_DAU_NHANH.md  BUILD_GUIDE.md  BUTTON_AUDIT_REPORT.md  CHANGELOG.md  CHAY_NGAY.md  CHECKLIST_COMPLETION_REPORT.md  CLEANUP_REPORT.md  CLEAN_LOGGING_GUIDE.md  CODE_OF_CONDUCT.md  COMMIT_SUMMARY.md  COMPARISON.md  CONFIG_GUIDE.md  CONFIG_SYSTEM.md  CONTRIBUTING.md  CSS_OPTIMIZATION_PLAN.md  DAILY_TASKS.md  DATABASE_FIX.md  DEVELOPMENT_CHECKLIST.md  DEV_MODE.md  Dockerfile  (+439 more)
.augment/env/: setup.sh
.claude/: mcp.json  settings.local.json
.cursor/rules/: rule.mdc  ui_design_rule.mdc
.github/workflows/: ci.yml  codeql.yml  docs.yml
app/: __init__.py  app.py  auth.py  config.json  config.py  db.py  forms.py  i18n.py  import_tdesktop_session.py  log.py  migrate_unique_id.py  opentele_patch.py  scanner.py  session_import.py  telegram_auth.py  telegram_desktop_import.py  telegram_session_manager.py  telegram_storage.py  web_config.py  web_config_dev.json
app/templates/: base.html  index.html  scan.html  search.html  settings.html
client/: index.html  package-lock.json  package.json  vite.config.ts
client/.next/: trace
client/src/: App.tsx
config/: Dockerfile  docker-compose.yml  gunicorn.conf.py  server.py
data/: .gitignore  .gitkeep  teledrive.db
desktop_ui/: index.html
docs/: API.md  API_SHARE_DELETE.md  AUTHENTICATION.md  CODE_DOCUMENTATION.md  HUONG_DAN_DANG_NHAP_TELEGRAM.md  OPTIMIZATION.md  README.md  README_LocalFileManager.md  SECURITY.md  TESTING_CHECKLIST.md  guide.md  troubleshooting.md
eel_web/: index.html
frontend/: package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/scripts/: sync-i18n-keys.js
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
instance/: teledrive.db  teledrive_backup_20250718_193020.db
output/: .gitkeep
public/: 404.html  500.html  dashboard.html  index.html  login.html  telegram-api-config.html  telegram-api-login.html  telegram-login.html  widget-demo.html
public/css/: custom.css  style.css  styles.css
public/js/: app.js  main.js  settings.js
requirements/: base.txt  dev.txt  prod.txt
scripts/: __init__.py  add_sample_logs.py  admin.py  auto_login_telegram.py  backup.py  backup.sh  build.bat  check_code_quality.py  check_config.py  check_simple.py  check_telegram_session.py  clean.bat  cleanup.py  commit.py  create_admin.py  create_favicon.py  create_logs_table.py  css.py  deploy.sh  dev.bat  format.bat  import_telegram_desktop_session.py  install.bat  logs.py  manage_admin.py  migrate.py  migrate_telegram_storage.py  production.py  quick_admin.py  reset_telegram_session.py  run.bat  run_production.py  security_check.py  setup.bat  summary.bat  test.bat  update_imports.py  verify.py
server/: .env  .env.example  package-lock.json  package.json  tsconfig.json
server/src/: index.ts  index.ts.bak
source/: app.py  auth.py  bash.exe.stackdump  cfg_mgr.py  config.json  config.py  database.py  db.py  engine.py  flask_config.py  forms.py  logger.py  main.py  manager.py  migrate.py  models.py  scanner.py  web_config.py  web_config_dev.json
source/data/: teledrive.db  teledrive_backup.db
src/: __init__.py  analytics.js  app.js  create-structure.js  database.py  index.js  index.ts  main.js  server.js  sync.js
src/app/: app.py  cli.py  database.py  logger.py  monitor.py  scanner.py  web.py
src/auth/: __init__.py  auth_manager.py  manager.py  models.py
src/config/: config.js  database.js  index.js  index.ts  production.py  telegram.js
src/controllers/: auth.controller.ts  authController.js  file.controller.ts  fileController.js  folderController.js
src/core/: main.py
src/handlers/: commandHandler.js  fileHandler.js  menuHandler.js
src/log_system/: __init__.py  production.py
src/middleware/: auth.middleware.ts
src/middlewares/: authMiddleware.js
src/models/: __init__.py  file.js  file.model.ts  otp.py  user.model.ts
src/modules/: README.md  routes.js
src/monitoring/: health.py
static/: demo.html  manifest.json  sw.js  test-icons.html
tauri-app/: app.js  index.html  package.json  styles.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: main.rs
teledrive/: __init__.py  cli.py
teledrive-simple/: README.md  setup.bat
templates/: analytics.html  base.html  clean.html  dashboard.html  demo.html  error.html  files.html  index.html  login.html  offline.html  register.html  scan.html  search.html  settings.html  setup.html  share_error.html  shared_file.html  stats.html  upload.html
test_files/: test_data.csv  test_data.json  test_markdown.md  test_text.txt  test_xml.xml
tests/: LOGIN_TEST_README.md  README.md  __init__.py  basic_functionality_test.py  check_core_functionality.py  check_database.py  comprehensive_test_suite.py  conftest.py  file_types_test_results.json  init_local_db.py  project_health_check.py  pytest.ini  quick_login_test.py  requirements-test.txt  run_tests.py  seed_share.py  setup_telegram_auth.py  simple_test_suite.py  smoke_share.py  telegram_integration_test.py  test_app.py  test_app_login_integration.py  test_auth.py  test_config.py  test_database_schema.py  test_delete_output_filename.py  test_delete_unit.py  test_download_unit.py  test_file_types.py  test_filesystem.py  test_i18n.py  test_imports.py  test_login_flow.py  test_share_and_delete_http.py  test_share_limits.py  test_share_password_expiry.py  test_share_update_analytics.py  test_telegram_login_standalone.py  test_telegram_storage.py  test_telegram_storage_integration.py  (+1 more)
ui/: README.md  index.html
views/: auth-waiting.ejs  bot-settings.ejs  dashboard.ejs  empty-files.ejs  error.ejs  file-details.ejs  file-download.ejs  file-preview.ejs  index-simple.ejs  index.ejs  login.ejs  trash.ejs  upload.ejs
(+454 files in other folders)
