[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "teledrive"
dynamic = ["version"]
description = "Modern file management for Telegram files with Google Drive-style interface"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "TeleDrive Team", email = "contact@teledrive.dev"}
]
maintainers = [
    {name = "TeleDrive Maintainers", email = "maintainers@teledrive.dev"}
]
keywords = ["telegram", "file-management", "google-drive", "flask"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: File Sharing",
    "Topic :: Utilities",
    "Framework :: Flask",
]
dependencies = [
    # Core dependencies
    "flask>=2.3.3",
    "flask-cors>=4.0.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.0.5",
    "flask-wtf>=1.1.1",
    "flask-limiter>=3.5.0",
    "flask-session>=0.5.0",
    "sqlalchemy>=2.0.0",
    "werkzeug>=2.3.7",
    "jinja2>=3.1.2",
    "itsdangerous>=2.1.2",
    
    # Authentication
    "telethon>=1.34.0",
    "cryptography>=41.0.0",
    
    # Database
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    
    # File handling
    "pillow>=10.0.0",
    "python-magic>=0.4.27",
    "requests>=2.31.0",
    "aiofiles>=23.0.0",
    
    # Data processing
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    
    # Monitoring & Performance
    "psutil>=5.9.0",
    
    # Web server
    "waitress>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-env>=0.8.0",
    "pre-commit>=3.3.0",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.2.2",
]

production = [
    "gunicorn>=21.0.0; platform_system != 'Windows'",
    "gevent>=23.9.0; platform_system != 'Windows'",
    "psycopg2-binary>=2.9.0",
    "uvicorn>=0.23.0",
]

windows = [
    "pywin32>=306; platform_system == 'Windows'",
]

[project.urls]
Homepage = "https://github.com/quangminh1212/TeleDrive"
Documentation = "https://github.com/quangminh1212/TeleDrive/blob/main/README.md"
Repository = "https://github.com/quangminh1212/TeleDrive.git"
Changelog = "https://github.com/quangminh1212/TeleDrive/blob/main/README.md"
Issues = "https://github.com/quangminh1212/TeleDrive/issues"

[project.scripts]
teledrive = "src.teledrive.cli:main"

[tool.setuptools]
packages = ["src.teledrive"]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools_scm]
write_to = "src/teledrive/_version.py"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = ["tests"]
plugins = [
    "sqlalchemy.ext.mypy.plugin",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["src/teledrive/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--verbose --color=yes"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
env = [
    "DEV_MODE=true",
]
