[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teledrive"
version = "0.1.0"
description = "Google Drive-like Telegram File Manager"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "TeleDrive Team", email = "info@teledrive.io"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Communications :: File Sharing",
    "Framework :: Flask",
]
keywords = ["telegram", "file-manager", "drive", "cloud-storage"]
dependencies = [
    "telethon>=1.34.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
    "openpyxl>=3.1.0",
    "flask>=2.3.0",
    "flask-socketio>=5.3.0",
    "eventlet>=0.33.0",
    "sqlalchemy>=1.4.0",
    "flask-sqlalchemy>=3.0.0",
    "alembic>=1.8.0",
    "flask-migrate>=3.1.0",
    "flask-login>=0.6.0",
    "bcrypt>=4.0.0",
    "flask-wtf>=1.1.0",
    "wtforms>=3.0.0",
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "sphinx>=7.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[project.urls]
"Homepage" = "https://github.com/username/teledrive"
"Bug Tracker" = "https://github.com/username/teledrive/issues"
"Documentation" = "https://teledrive.readthedocs.io/"

[project.scripts]
teledrive = "teledrive.cli:main"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"